Margin added to the footer

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -436,7 +436,6 @@ border-top-left-radius: 0;
     width: 100%;
     background: url('../img/bg.png');
     color: #FFF;
-    margin-top:15px;
 }
 
 /* CUSTOM THUN */
@@ -2411,7 +2410,7 @@ td.center { text-align:center; }
 .input-icon.icon-right .icon, .input-icon.icon-right .fa { font-size:16px;float:right; position:relative; left:-12px; top:26px; }
 .input-icon.icon-right .form-control { padding-right:28px; padding-left:12px; }
 
-.cntnr {  width:100%; height:100%; display:table; content: ''; clear:both; margin:0; padding:0; }
+.cntnr {  width:100%; height:100%; display:table; content: ''; clear:both; margin:0; padding:0; margin-bottom: 15px }
 .cntnr > .left { display:table-cell; width:200px; height:100%; background:#F3F3F3 !important; box-shadow: inset -10px 0px 20px -10px #C6C6C6 !important; vertical-align:top; }
 .cntnr > .right { display:table-cell; height:100%; background:#FFF; vertical-align:top; }
 .cntnr > .left > .logo { width:100%; height:100px; line-height:100px; text-align:center; background: url('../img/bg.png'); }
