Fixed template traceback

--- a/templates/analyses/report/_staticEla.html
+++ b/templates/analyses/report/_staticEla.html
@@ -1,6 +1,6 @@
 {% load analyses_tags %}
 {% if embed %}
     <img src="{{ analysis.report.ela.ela_image|to_base64 }}" />
-{% else %}
+{% elif analysis.report.ela.ela_image %}
     <img src="{% url "analyses.views.image" analysis.report.ela.ela_image %}" />
 {% endif %}
